@@ -43,6 +43,7 @@ Version 1.13.0-dev:
      when the campaign is reloaded from a non-host side, or after a player rejoins
      from observer status. Hopefully, reloading campaigns is easier after this.
    * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
+   * Fix bug #21808: Cannot join a reloaded game as an observer.
    * Fixed halos glitching through locations that become shrouded after the
      halo is rendered for the first time.
    * OS X user data directory is now ~/Library/Application Support/Wesnoth_1.13
